# poor-man-s-cache

./: .dockerignore  .env  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.callgrind  Dockerfile.debug  Dockerfile.utests  LICENSE  README.md  callgrind.bash  common-compose-config.yaml  docker-compose-local.yaml  docker-compose.yaml  docker-compose.yaml.j2  generate_compose.py  local_server_setup.bash  run-all-tests.bash  sockmon.bash  sysctl.conf  valgrind.bash
.github/workflows/: codeql.yml  main.yml  publish-dev.yml  publish.yml
docs/: design.md
helm/poor-man-s-cache/: Chart.yaml  values.yaml
helm/poor-man-s-cache/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml
helm/poor-man-s-cache/templates/tests/: test-connection.yaml
src/: CMakeLists.txt  delta_encoding.h  encoding_test.cpp  env.h  env.hpp  hash.cpp  hash.h  kvs.cpp  kvs.h  kvs_test.cpp  main.cpp  metrics.h  non_copyable.h  non_copyable.hpp  server.cpp  server.h  sockutils.h
src/client/: cache_client.hpp
src/compressor/: gzip_compressor.cpp  gzip_compressor.h  gzip_compressor.hpp  gzip_compressor_test.cpp
src/hash/: hash.cpp  hash.h  hash.hpp
src/kvs/: kvs.cpp  kvs.h  kvs.hpp  kvs_test.cpp
src/metrics/: metrics.cpp  metrics.h  metrics.hpp
src/primegen/: primegen.cpp  primegen.h  primegen.hpp
src/server/: conn_manager.hpp  constants.hpp  coroutines.cpp  coroutines.h  coroutines.hpp  protocol.cpp  protocol.h  protocol.hpp  protocol_test.cpp  server.cpp  server.h  server.hpp  shard.cpp  shard.h  shard.hpp  sockutils.cpp  sockutils.h  sockutils.hpp
src/trashcan/: trashcan.hpp
src/utils/: time.cpp  time.h  time.hpp  trashcan.hpp
tests/: Dockerfile  connection_pool.py  per_request_connection_test.py  tcp_server_test.py  tests_old.py  websocket_test.py
tests/client_integration/: Dockerfile  client_integration_test.cpp
tests/data/: 2_currencies.json  3_currency_exchange_rates.json  4_dog_facts.json  5_london_weather_history.json  6_london_weather_forecast.json
